--- a/docs/partner_editable/deployment_options.adoc
+++ b/docs/partner_editable/deployment_options.adoc
@@ -2,5 +2,5 @@
 
 This Quick Start provides two deployment options:
 
-* Deploy {partner-product-short-name} at once: All features are enabled by default and will be installed.
-* Deploy {partner-product-short-name} iteratively with feature flippers: recommended if you only want to use certain features or you want to test the impact of particular features.
+* Deploy {partner-product-short-name} at once: All features are enabled by default and are installed.
+* Deploy {partner-product-short-name} iteratively with feature flippers: Only certain features are enabled at a time. This option is useful when you want to test the impact of introducing certain features iteratively.
