--- a/docs/partner_editable/faq_troubleshooting.adoc
+++ b/docs/partner_editable/faq_troubleshooting.adoc
@@ -12,7 +12,4 @@ For more information, see https://docs.aws.amazon.com/AWSCloudFormation/latest/U
 
 == Troubleshooting
 
-To get help:
-
-- Join our link:https://groups.google.com/forum/#!forum/superwerker/join[mailing list]
-- Chat with us on the link:https://og-aws.slack.com/archives/C01CQ34TC93[#superwerker] channel in the OG-AWS Slack (link:http://slackhatesthe.cloud/[invite link]).
+Join our link:https://groups.google.com/forum/#!forum/superwerker/join[mailing list^] and chat with us on the link:https://og-aws.slack.com/archives/C01CQ34TC93[#superwerker^] channel in the og-aws Slack channel (link:http://slackhatesthe.cloud/[invite link^]).
