--- a/docs/partner_editable/overview_target_and_usage.adoc
+++ b/docs/partner_editable/overview_target_and_usage.adoc
@@ -4,9 +4,4 @@
 
 This guide provides instructions for deploying the {partner-product-short-name} Quick Start reference architecture on the AWS Cloud.
 
-This Quick Start is for users who want to quickly get started with the AWS Cloud with preconceived decisions based on years of experience. Start-ups and small to medium-sized companies, where time-to-market and financial aspects play an especially important role, can benefit in particular.
-
-As a rule of thumb: if you have no dedicated AWS team or cloud centre of excellence in-house, you should use superwerker.
-
-But also large companies can use superwerker as a basis. Since superwerker is open source, it can also be tailored to individual needs.
-
+This Quick Start is for users who want to quickly get started with the AWS Cloud without needing to spend a lot of time making decisions and tracking down information. 
